// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toast API 1`] = `
.c0 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #00A1DE;
  background-color: rgba(255,255,255,0.9);
}

.c1 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #00A1DE;
  background-color: rgba(0,161,222,0.1);
}

<Toast
  kind="primary"
>
  <styled-components__StyledCard
    kind="primary"
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
              [Function],
              ";
  overflow: hidden;
",
              "
  border: 1px solid ",
              [Function],
              ";
  background-color: rgba(255, 255, 255, 0.9);
",
            ],
          },
          "displayName": "styled-components__StyledCard",
          "render": [Function],
          "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
          "target": "div",
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      kind="primary"
    >
      <div
        className="c0"
        kind="primary"
      >
        <styled-components__StyledP
          kind="primary"
        >
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  margin: 0;
  font-size: ",
                    [Function],
                    ";

  ",
                    [Function],
                    ";
",
                    "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                    [Function],
                    ";
  background-color: ",
                    [Function],
                    ";
",
                  ],
                },
                "displayName": "styled-components__StyledP",
                "propTypes": Object {
                  "color": [Function],
                },
                "render": [Function],
                "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                "target": "p",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="primary"
          >
            <p
              className="c1"
              kind="primary"
            >
              Success! You have delete the item.
            </p>
          </StyledComponent>
        </styled-components__StyledP>
      </div>
    </StyledComponent>
  </styled-components__StyledCard>
</Toast>
`;

exports[`Storyshots Toast With kind props 1`] = `
.c3 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #00A1DE;
  background-color: rgba(255,255,255,0.9);
}

.c1 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #999A94;
  background-color: rgba(255,255,255,0.9);
}

.c5 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #69BE28;
  background-color: rgba(255,255,255,0.9);
}

.c7 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #F5364E;
  background-color: rgba(255,255,255,0.9);
}

.c9 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #F39A1E;
  background-color: rgba(255,255,255,0.9);
}

.c4 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #00A1DE;
  background-color: rgba(0,161,222,0.1);
}

.c2 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #999A94;
  background-color: rgba(250,250,250,0.1);
}

.c6 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #69BE28;
  background-color: rgba(105,190,40,0.1);
}

.c8 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #F5364E;
  background-color: rgba(245,54,78,0.1);
}

.c10 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #F39A1E;
  background-color: rgba(243,154,30,0.1);
}

.c0 > * {
  margin-bottom: 16px;
}

<Toastexample__DemoWrapper>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "Toastexample__DemoWrapper-sc-1ewmtuh-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "
  > * {
    margin-bottom: 16px;
  }
",
          ],
        },
        "displayName": "Toastexample__DemoWrapper",
        "render": [Function],
        "styledComponentId": "Toastexample__DemoWrapper-sc-1ewmtuh-0",
        "target": "div",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      <Toast
        key="default"
        kind="default"
      >
        <styled-components__StyledCard
          kind="default"
        >
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                  "isStatic": false,
                  "lastClassName": "c9",
                  "rules": Array [
                    "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
                    [Function],
                    ";
  overflow: hidden;
",
                    "
  border: 1px solid ",
                    [Function],
                    ";
  background-color: rgba(255, 255, 255, 0.9);
",
                  ],
                },
                "displayName": "styled-components__StyledCard",
                "render": [Function],
                "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                "target": "div",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="default"
          >
            <div
              className="c1"
              kind="default"
            >
              <styled-components__StyledP
                kind="default"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": undefined,
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                        "isStatic": false,
                        "lastClassName": "c10",
                        "rules": Array [
                          "
  margin: 0;
  font-size: ",
                          [Function],
                          ";

  ",
                          [Function],
                          ";
",
                          "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                          [Function],
                          ";
  background-color: ",
                          [Function],
                          ";
",
                        ],
                      },
                      "displayName": "styled-components__StyledP",
                      "propTypes": Object {
                        "color": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                      "target": "p",
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  kind="default"
                >
                  <p
                    className="c2"
                    kind="default"
                  >
                    default
                     - You have delete the item.
                  </p>
                </StyledComponent>
              </styled-components__StyledP>
            </div>
          </StyledComponent>
        </styled-components__StyledCard>
      </Toast>
      <Toast
        key="primary"
        kind="primary"
      >
        <styled-components__StyledCard
          kind="primary"
        >
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                  "isStatic": false,
                  "lastClassName": "c9",
                  "rules": Array [
                    "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
                    [Function],
                    ";
  overflow: hidden;
",
                    "
  border: 1px solid ",
                    [Function],
                    ";
  background-color: rgba(255, 255, 255, 0.9);
",
                  ],
                },
                "displayName": "styled-components__StyledCard",
                "render": [Function],
                "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                "target": "div",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="primary"
          >
            <div
              className="c3"
              kind="primary"
            >
              <styled-components__StyledP
                kind="primary"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": undefined,
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                        "isStatic": false,
                        "lastClassName": "c10",
                        "rules": Array [
                          "
  margin: 0;
  font-size: ",
                          [Function],
                          ";

  ",
                          [Function],
                          ";
",
                          "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                          [Function],
                          ";
  background-color: ",
                          [Function],
                          ";
",
                        ],
                      },
                      "displayName": "styled-components__StyledP",
                      "propTypes": Object {
                        "color": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                      "target": "p",
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  kind="primary"
                >
                  <p
                    className="c4"
                    kind="primary"
                  >
                    primary
                     - You have delete the item.
                  </p>
                </StyledComponent>
              </styled-components__StyledP>
            </div>
          </StyledComponent>
        </styled-components__StyledCard>
      </Toast>
      <Toast
        key="success"
        kind="success"
      >
        <styled-components__StyledCard
          kind="success"
        >
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                  "isStatic": false,
                  "lastClassName": "c9",
                  "rules": Array [
                    "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
                    [Function],
                    ";
  overflow: hidden;
",
                    "
  border: 1px solid ",
                    [Function],
                    ";
  background-color: rgba(255, 255, 255, 0.9);
",
                  ],
                },
                "displayName": "styled-components__StyledCard",
                "render": [Function],
                "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                "target": "div",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="success"
          >
            <div
              className="c5"
              kind="success"
            >
              <styled-components__StyledP
                kind="success"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": undefined,
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                        "isStatic": false,
                        "lastClassName": "c10",
                        "rules": Array [
                          "
  margin: 0;
  font-size: ",
                          [Function],
                          ";

  ",
                          [Function],
                          ";
",
                          "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                          [Function],
                          ";
  background-color: ",
                          [Function],
                          ";
",
                        ],
                      },
                      "displayName": "styled-components__StyledP",
                      "propTypes": Object {
                        "color": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                      "target": "p",
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  kind="success"
                >
                  <p
                    className="c6"
                    kind="success"
                  >
                    success
                     - You have delete the item.
                  </p>
                </StyledComponent>
              </styled-components__StyledP>
            </div>
          </StyledComponent>
        </styled-components__StyledCard>
      </Toast>
      <Toast
        key="error"
        kind="error"
      >
        <styled-components__StyledCard
          kind="error"
        >
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                  "isStatic": false,
                  "lastClassName": "c9",
                  "rules": Array [
                    "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
                    [Function],
                    ";
  overflow: hidden;
",
                    "
  border: 1px solid ",
                    [Function],
                    ";
  background-color: rgba(255, 255, 255, 0.9);
",
                  ],
                },
                "displayName": "styled-components__StyledCard",
                "render": [Function],
                "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                "target": "div",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="error"
          >
            <div
              className="c7"
              kind="error"
            >
              <styled-components__StyledP
                kind="error"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": undefined,
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                        "isStatic": false,
                        "lastClassName": "c10",
                        "rules": Array [
                          "
  margin: 0;
  font-size: ",
                          [Function],
                          ";

  ",
                          [Function],
                          ";
",
                          "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                          [Function],
                          ";
  background-color: ",
                          [Function],
                          ";
",
                        ],
                      },
                      "displayName": "styled-components__StyledP",
                      "propTypes": Object {
                        "color": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                      "target": "p",
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  kind="error"
                >
                  <p
                    className="c8"
                    kind="error"
                  >
                    error
                     - You have delete the item.
                  </p>
                </StyledComponent>
              </styled-components__StyledP>
            </div>
          </StyledComponent>
        </styled-components__StyledCard>
      </Toast>
      <Toast
        key="warning"
        kind="warning"
      >
        <styled-components__StyledCard
          kind="warning"
        >
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                  "isStatic": false,
                  "lastClassName": "c9",
                  "rules": Array [
                    "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
                    [Function],
                    ";
  overflow: hidden;
",
                    "
  border: 1px solid ",
                    [Function],
                    ";
  background-color: rgba(255, 255, 255, 0.9);
",
                  ],
                },
                "displayName": "styled-components__StyledCard",
                "render": [Function],
                "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                "target": "div",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="warning"
          >
            <div
              className="c9"
              kind="warning"
            >
              <styled-components__StyledP
                kind="warning"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": undefined,
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                        "isStatic": false,
                        "lastClassName": "c10",
                        "rules": Array [
                          "
  margin: 0;
  font-size: ",
                          [Function],
                          ";

  ",
                          [Function],
                          ";
",
                          "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                          [Function],
                          ";
  background-color: ",
                          [Function],
                          ";
",
                        ],
                      },
                      "displayName": "styled-components__StyledP",
                      "propTypes": Object {
                        "color": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                      "target": "p",
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  kind="warning"
                >
                  <p
                    className="c10"
                    kind="warning"
                  >
                    warning
                     - You have delete the item.
                  </p>
                </StyledComponent>
              </styled-components__StyledP>
            </div>
          </StyledComponent>
        </styled-components__StyledCard>
      </Toast>
    </div>
  </StyledComponent>
</Toastexample__DemoWrapper>
`;
